<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.fitzeng.recurrentoom.MainActivity">

    <TextView
        android:text="@string/oom"
        android:textSize="26sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/staticContext"
        android:text="@string/static_context"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/staticView"
        android:text="@string/static_view"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/singleton"
        android:text="@string/singleton"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/animation"
        android:text="@string/animation"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
